--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,8 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.14.1",
-    "react-tradingview-embed": "^3.0.6",
-    "react-tradingview-widget": "^1.3.2",
     "tailwindcss": "^3.4.7",
     "web-vitals": "^2.1.4"
   },
